typesafe-builders/tests/ui/reject/field_attr/decay/no_generic.rs
mod other {
	use typesafe_builders::prelude::*;

	#[derive(Builder)]
	pub struct Struct {
		#[builder(decay)]
		x: u8,
	}
}

fn main() {
}
