typesafe-builders/tests/ui/reject/field_attr/decay/no_generic.stderr
error: Expected one generic argument but got none
 --> tests/ui/reject/field_attr/decay/no_generic.rs:7:6
  |
7 |         x: u8,
  |            ^^
